--- a/package.json
+++ b/package.json
@@ -1,34 +1,38 @@
 {
- "name": "validator",
- "version": "1.0.0",
- "description": "General purpose JSON object validator",
- "author": "Joost Lubach",
- "license": "MIT",
- "scripts": {
-  "build": "(pnpm build:prepare && pnpm build:tsc && pnpm build:tsc-alias && pnpm build:copy && pnpm build:rsync); pnpm build:cleanup",
-  "build:prepare": "test -x .build && rm -rf .build; mkdir -p .build",
-  "build:tsc": "tsc -p tsconfig.json --outDir .build",
-  "build:tsc-alias": "tsc-alias -p tsconfig.json --outDir .build",
-  "build:copy": "copyfiles -u 1 src/**/*.yml src/**/*.css .build",
-  "build:rsync": "rsync -uvaz --delete .build/ dist/",
-  "build:cleanup": "rm -rf .build",
-  "clean": "rimraf dist",
-  "test": "NODE_ENV=test jest"
-},
-"exports": {
-  ".": {
-    "import": "./dist/index.js",
-    "types": "./dist/index.d.ts"
+  "name": "validator",
+  "version": "1.0.0",
+  "description": "General purpose JSON object validator",
+  "author": "Joost Lubach",
+  "license": "MIT",
+  "scripts": {
+    "build": "(pnpm build:prepare && pnpm build:tsc && pnpm build:tsc-alias && pnpm build:copy && pnpm build:rsync); pnpm build:cleanup",
+    "build:prepare": "test -x .build && rm -rf .build; mkdir -p .build",
+    "build:tsc": "tsc -p tsconfig.json --outDir .build",
+    "build:tsc-alias": "tsc-alias -p tsconfig.json --outDir .build",
+    "build:copy": "copyfiles -u 1 src/**/*.yml src/**/*.css .build",
+    "build:rsync": "rsync -uvaz --delete .build/ dist/",
+    "build:cleanup": "rm -rf .build",
+    "clean": "rimraf dist",
+    "test": "NODE_ENV=test jest"
   },
-  "./types": {
-    "import": "./dist/types/index.js",
-    "types": "./dist/types/index.d.ts"
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./types": {
+      "import": "./dist/types/index.js",
+      "types": "./dist/types/index.d.ts"
+    }
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.104",
+    "copyfiles": "^2.4.1",
+    "rimraf": "^5.0.1",
+    "tsc-alias": "^1.8.7",
+    "typescript": "^5.1.6"
   }
-},
-"dependencies": {
-  "lodash": "^4.17.21"
- },
- "devDependencies": {
-  "@types/lodash": "^4.14.104"
- }
 }
