Adding stricter typing.

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     }
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "ytil": "workspace:^"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.104",
