--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "build": "(pnpm build:prepare && pnpm build:tsc && pnpm build:tsc-alias && pnpm build:copy && pnpm build:rsync); pnpm build:cleanup",
     "build:prepare": "test -x .build && rm -rf .build; mkdir -p .build",
-    "build:tsc": "tsc -p tsconfig.json --outDir .build/cjs && tsc -p tsconfig.esm.json --outDir .build/esm",
-    "build:tsc-alias": "tsc-alias -p tsconfig.json --outDir .build/cjs && tsc-alias -p tsconfig.esm.json --outDir .build/esm",
-    "build:copy": "copyfiles -u 1 src/**/*.yml src/**/*.css .build/cjs && copyfiles -u 1 src/**/*.yml src/**/*.css .build/esm",
+    "build:tsc": "tsc -p tsconfig.prod.json --outDir .build",
+    "build:tsc-alias": "tsc-alias -p tsconfig.prod.json --outDir .build",
+    "build:copy": "copyfiles -u 1 src/**/*.yml src/**/*.css .build",
     "build:rsync": "rsync -uvaz --delete .build/ dist/",
     "build:cleanup": "rm -rf .build",
     "clean": "rimraf dist",
@@ -17,19 +17,12 @@
   },
   "exports": {
     ".": {
-      "require": {
-        "types": "./dist/cjs/index.d.ts",
-        "default": "./dist/cjs/index.js"
-      },
-      "import": {
-        "types": "./dist/esm/index.d.ts",
-        "default": "./dist/esm/index.js"
-      }
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
     },
     "./types": {
-      "require": "./dist/cjs/types/index.js",
-      "import": "./dist/esm/types/index.js",
-      "types": "./dist/cjs/types/index.d.ts"
+      "types": "./dist/types/index.d.ts",
+      "default": "./dist/types/index.js"
     }
   },
   "dependencies": {
@@ -41,6 +34,6 @@
     "copyfiles": "^2.4.1",
     "rimraf": "^5.0.1",
     "tsc-alias": "^1.8.7",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   }
 }
