--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.104",
     "copyfiles": "^2.4.1",
+    "openapi-types": "^12.1.3",
     "rimraf": "^5.0.1",
     "tsc-alias": "^1.8.7",
     "typescript": "^5.1.6"
