--- a/package.json
+++ b/package.json
@@ -4,38 +4,18 @@
   "description": "General purpose JSON object validator",
   "author": "Joost Lubach",
   "license": "MIT",
+  "type": "module",
   "scripts": {
-    "build": "pnpm clean && pnpm build:esm && pnpm build:cjs",
-    "build:esm": "pnpm build:tsc:esm",
-    "build:tsc:esm": "tsc -p tsconfig.prod.json --module ESNext --outDir dist/esm",
-    "build:cjs": "pnpm build:tsc:cjs",
-    "build:tsc:cjs": "tsc -p tsconfig.prod.json --module CommonJS --outDir dist/cjs",
+    "build": "pnpm clean && pnpm build:tsc",
+    "build:tsc": "tsc -p tsconfig.prod.json",
     "clean": "rimraf dist",
     "lint": "eslint src --ext .ts",
     "check": "tsc -p . --noEmit",
     "test": "NODE_ENV=test jest"
   },
   "exports": {
-    ".": {
-      "require": {
-        "types": "./dist/cjs/index.d.ts",
-        "default": "./dist/cjs/index.js"
-      },
-      "import": {
-        "types": "./dist/esm/index.d.ts",
-        "default": "./dist/esm/index.js"
-      }
-    },
-    "./types": {
-      "require": {
-        "types": "./dist/cjs/types/index.d.ts",
-        "default": "./dist/cjs/types/index.js"
-      },
-      "import": {
-        "types": "./dist/esm/types/index.d.ts",
-        "default": "./dist/esm/types/index.js"
-      }
-    }
+    ".": "./dist/index.js",
+    "./types": "./dist/types/index.js"
   },
   "dependencies": {
     "doctext": "workspace:^",
