Converted to ES Modules

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "General purpose JSON object validator",
   "author": "Joost Lubach",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "build": "pnpm clean && pnpm build:tsc",
     "build:tsc": "tsc -p tsconfig.prod.json",
