--- a/package.json
+++ b/package.json
@@ -4,18 +4,30 @@
   "description": "General purpose JSON object validator",
   "author": "Joost Lubach",
   "license": "MIT",
-  "type": "module",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/types/index.d.ts",
+      "import": "./dist/esm/index.js",
+      "default": "./dist/cjs/index.js"
+    },
+    "./types": {
+      "types": "./dist/types/types/index.d.ts",
+      "import": "./dist/esm/types/index.js",
+      "default": "./dist/cjs/types/index.js"
+    }
+  },
   "scripts": {
     "build": "pnpm clean && pnpm build:tsc",
-    "build:tsc": "tsc -p tsconfig.prod.json",
+    "build:tsc": "pnpm build:tsc:esm && pnpm build:tsc:cjs",
+    "build:tsc:esm": "tsc -p tsconfig.prod.json --module esnext --outDir dist/esm --declarationDir dist/types",
+    "build:tsc:cjs": "tsc -p tsconfig.prod.json --module commonjs --outDir dist/cjs --declaration false --declarationMap false",
     "clean": "rimraf dist",
     "lint": "eslint src --ext .ts",
     "check": "tsc -p . --noEmit",
     "test": "NODE_ENV=test jest"
-  },
-  "exports": {
-    ".": "./dist/index.js",
-    "./types": "./dist/types/index.js"
   },
   "dependencies": {
     "doctext": "workspace:^",
