--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "ytil": "workspace:^"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.104",
+    "@types/lodash": "^4.17.0",
     "copyfiles": "^2.4.1",
     "openapi-types": "^12.1.3",
-    "rimraf": "^5.0.1",
-    "tsc-alias": "^1.8.7",
-    "typescript": "^5.1.6"
+    "rimraf": "^5.0.5",
+    "tsc-alias": "^1.8.8",
+    "typescript": "5.4.3"
   }
 }
