--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build:tsc:esm": "tsc -p tsconfig.prod.json --module esnext --outDir dist/esm --declarationDir dist/types",
     "build:tsc:cjs": "tsc -p tsconfig.prod.json --module commonjs --outDir dist/cjs --declaration false --declarationMap false",
     "clean": "rimraf dist",
-    "lint": "eslint src --ext .ts",
+    "lint": "eslint src/**",
     "check": "tsc -p . --noEmit",
     "test": "NODE_ENV=test jest"
   },
